[package]
name = "card-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-rfid-decoder = "0.1.0"
rumqttc = "0.22.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
log = "0.4.20"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["full"] }
